[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/character/PlayerScript.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/character/player/toonSheet.png" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 6.96322
height = 14.0246

[sub_resource type="Animation" id=2]
resource_name = "Idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("playerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Walk"
length = 0.44
loop = true
step = 0.04
tracks/0/type = "value"
tracks/0/path = NodePath("playerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.04, 0.08, 0.12, 0.16, 0.2, 0.24, 0.28, 0.32, 0.36, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11 ]
}

[sub_resource type="CapsuleShape2D" id=4]
radius = 10.5
height = 14.0

[node name="playerBody" type="KinematicBody2D"]
collision_layer = 2
collision/safe_margin = 0.05
script = ExtResource( 1 )

[node name="playerSprite" type="Sprite" parent="."]
position = Vector2( 0, -2.7 )
texture = ExtResource( 2 )
hframes = 12

[node name="armPivot" type="Position2D" parent="playerSprite"]
position = Vector2( 0, 5.5 )

[node name="handLocation" type="Position2D" parent="playerSprite/armPivot"]
position = Vector2( 5, 0 )

[node name="playerCollision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="timer" type="Timer" parent="."]

[node name="animationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 2 )
anims/Walk = SubResource( 3 )

[node name="camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.4, 0.4 )
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0

[node name="gunPickupArea" type="Area2D" parent="."]
collision_mask = 0

[node name="collisionShape2D" type="CollisionShape2D" parent="gunPickupArea"]
shape = SubResource( 4 )

[node name="label" type="Label" parent="."]
margin_left = 204.659
margin_top = -142.601
margin_right = 244.659
margin_bottom = -128.601
